fix: Attempt to set z-index of infowindow

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -50,6 +50,10 @@ body {
   font-size: 15px;
 }
 
+.gm-style-iw {
+  z-index: 99999999;
+}
+
 @media only screen and (max-width: 500px) {
 
     h2 {
@@ -65,6 +69,7 @@ body {
     top: 0px;
     width: 20%;
     left: 5%;
+    z-index: 0;
     }
 
     #search {
@@ -74,6 +79,7 @@ body {
     height: 30px;
     width: 20%;
     font-size: 8px;
+    z-index: 0;
   }
 
     #toggleList {
@@ -84,6 +90,7 @@ body {
     width: 20%;
     font-size: 8px;
     background-color: #fff;
+    z-index: 0;
     }
 
     #list-view {
@@ -98,6 +105,7 @@ body {
     margin: 0;
     padding: 0;
     font-size: 15px;
+    z-index: 0;
   }
 
 
